--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
     <script>
         // Get the current hour
         const currentHour = new Date().getHours();
-        const userName = "John"; // Replace with dynamic name if needed
+        const userName = "Giridharan Paramasivam";
         let greetingMessage;
 
         // Determine the greeting based on the hour
